# personal_finance_manager_shared

./: .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml
src/personal_finance_manager_shared/events/: base_listener.py  base_publisher.py  exchange_infos.py
src/personal_finance_manager_shared/loggers/: base_logger.py  console_logger.py
