[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal_finance_manager_shared"
version = "0.1.4"
authors = [
    {name = "Ngoc Chau", email = "playerzawesome@gmail.com"},
]
description = "This repository is a shared library which will be used by different services."
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["personal_finance_manager_shared*"]

[tool.ruff]
line-length = 119

[tool.isort]
line_length = 119
